//  
// Copyright (c) BRNO UNIVERSITY OF TECHNOLOGY. All rights reserved.  
// Licensed under the MIT License. See LICENSE file in the solution root for full license information.  
//
syntax = "proto3";
package ndx.model;
import "PacketModel.proto";
import "ConversationModel.proto";
/// <summary>
///	Enumerates all supported packet capture file format.
///	</summary>
enum PcapFileFormat { RawFormat = 0; Libpcap =1; Pcapng = 2; Netmon = 3; UnknownFormat = 255; } 
message PcapFile {
	PcapFileFormat FileFormat = 1;
	string Uri = 2;
	bytes Md5hash = 3;
	int64 IngestedOn = 4;
}
message PcapTable {
	map<int32, PcapFile> Items = 10;
}

/// <summary>
///	Represents a single conversation table.
///	</summary>
message ConversationTable {
	map<int32, Conversation> Items = 10;
}

/// <summary>
///	Represents a table of meta information about frames.
///	<summary>
message FrameTable {
	map<int32, MetaFrame> Items = 10;
}

message MetacapIndex {	
	PcapTable PcapTable = 2;
	map<int32, FrameTable> FrameTables = 3;
	ConversationTable ConversationTable = 4;
}